@@ -61,7 +61,7 @@ gcu::CmdContext::Response CmdContextGtk::GetResponse (char const *message, int r
 		buttons |= GTK_BUTTONS_YES_NO;
 	if (responses & ResponseClose)
 		buttons |= GTK_BUTTONS_CLOSE;
-	gcugtk::Message *Box = new gcugtk::Message (static_cast < Application * > (m_App), message, GTK_MESSAGE_QUESTION, static_cast < GtkButtonsType > (buttons), static_cast < Application * > (m_App)->GetWindow ());
+	gcugtk::Message *Box = new gcugtk::Message (static_cast < Application * > (m_App), message, GTK_MESSAGE_QUESTION, static_cast < GtkButtonsType > (buttons), static_cast < Application * > (m_App)->GetWindow (), true);
 	buttons = Box->Run ();
 	switch (buttons) {
 	case GTK_RESPONSE_OK:
